fixed white space in right of digital and JP school page

--- a/jktmyanmarint.com/assets/css/main.css
+++ b/jktmyanmarint.com/assets/css/main.css
@@ -2721,35 +2721,7 @@ figure img {
     margin-right: auto;
     overflow: hidden;
     padding-top: 7px;
-    width: 500px;
-}
-
-
-/* width */
-
-iframe::-webkit-scrollbar {
-    width: 3px;
-}
-
-
-/* Track */
-
-iframe::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-
-/* Handle */
-
-iframe::-webkit-scrollbar-thumb {
-    background: #888;
-}
-
-
-/* Handle on hover */
-
-iframe::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    width: 100%;
 }
 
 .contact-form input,
